<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.navanee.firebasedemo.ViewExpenseActivity">

    <TextView
        android:text="@string/detail_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:text="@string/detail_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="15dp"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:id="@+id/dt_name"
        android:textSize="20sp" />

    <TextView
        android:text="@string/detail_Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="15dp"
        android:id="@+id/textView8"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignRight="@+id/dt_name"
        android:layout_alignEnd="@+id/dt_name"
        android:id="@+id/dt_category"
        android:layout_alignLeft="@+id/dt_name"
        android:layout_alignStart="@+id/dt_name"
        android:textSize="20sp" />

    <TextView
        android:text="@string/detail_Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="15dp"
        android:id="@+id/textView10"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignLeft="@+id/dt_category"
        android:layout_alignStart="@+id/dt_category"
        android:id="@+id/dt_amount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <TextView
        android:text="@string/detail_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_marginTop="15dp"
        android:id="@+id/textView12"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignRight="@+id/dt_amount"
        android:layout_alignEnd="@+id/dt_amount"
        android:id="@+id/dt_date"
        android:layout_alignLeft="@+id/dt_amount"
        android:layout_alignStart="@+id/dt_amount"
        android:textSize="20sp" />

    <Button
        android:text="@string/detail_Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dt_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:id="@+id/closeBtn" />

</RelativeLayout>
