<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.navanee.firebasedemo.AddExpenseActivity">

    <TextView
        android:text="@string/add_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/add_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="18dp"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:text="@string/add_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_marginTop="7dp"
        android:id="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="7dp"
        android:id="@+id/editCategory"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/editName"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColorLink="@android:color/holo_blue_bright" />

    <TextView
        android:text="@string/add_Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCategory"
        android:layout_marginTop="7dp"
        android:id="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="5dp"
        android:id="@+id/editAmount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:textColorLink="@android:color/holo_blue_bright" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editAmount"
        android:layout_weight="2">

        <Button
            android:text="@string/add_SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addBtn"
            android:layout_alignLeft="@+id/editAmount"
            android:layout_alignStart="@+id/editAmount"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp" />

        <Button
            android:text="@string/add_CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/addBtn"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:id="@+id/cancelBtn"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="15dp" />
    </LinearLayout>

</RelativeLayout>
